# rafm

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  FUNDING.rst  LICENSE.rst  README.rst  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  tests.yml
docs/: conf.py  funding.rst  index.rst  reference.rst  requirements.txt  usage.rst
src/rafm/: __init__.py  __main__.py  common.py  plddt.py
tests/: __init__.py  test_main.py
tests/testdata/: rafm_stats.tsv
